--- a/connexion.html
+++ b/connexion.html
@@ -19,7 +19,7 @@
             </defs>
         </svg>
     </div>
-    <header>
+    <header class="container-fluid">
         <div class="row justify-content-end">
             <div class="header-left col-md-5">
                 <div class="content">
@@ -31,32 +31,35 @@
                     <a href="#" class="btn btn-top-second">Se connecter</a>
                     <a href="#" class="btn btn-top-main">S'inscrire</a>
                 </nav>
-                <div class="content">
-                    <h1 class="title">Inscrivez-Vous</h1>
-                    <div class="form">
-                        <div class="forms-name">
-                            <input class="form-surname" type="text" placeholder="Prénom">
-                            <input class="form-name" type="text" placeholder="Nom">
+                <div class="container content">
+                    <div class="form-box">
+                            <h1 class="title">Inscrivez-Vous</h1>
+                            <form>
+                                <div class="form-group">
+                                    <div class="form-row">
+                                        <div class="col">
+                                        <input type="text" class="form-control" placeholder="First name">
+                                        </div>
+                                        <div class="col">
+                                        <input type="text" class="form-control" placeholder="Last name">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                </div> 
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                                        <label class="form-check-label" for="gridCheck">
+                                            J'ai lu et j'accepte les Conditions Générales d'Utilisation et la Politique de Protection des Données Personnelles.
+                                        </label>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-inscription">S'inscrire</button>
+                                <p class="already-accound">Vous avez déjà un compte ? <br><a href="">Connectez-vous</a></p>
+                            </form>
                         </div>
-                        <form>
-  
-                    <br>
-                        <input type="email" class="form-mail" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                        <br>
-                        <div class="checkboxalign"></div>
-                        <input class="form-check" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-text" for="defaultCheck1">J'ai lu et j'accepte les Conditions Générales d'Utilisation et la Politique de Protection des Données Personnelles.</label>
-                            <br>
-                        <div class="buttonalign">
-                        <button type="submit" class="btn-inscription">S'inscrire</button>
-                        </div>
-                            <br>
-                        <p class="end">Vous avez déjà un compte ?</p>
-                        <div class="alignconnexion">
-                        <a class="connexion" href="">Connectez-vous</a>
-                        </div>
-                    </div>
-                    
                 </div>
             </div>
         </div>
