--- a/register.html
+++ b/register.html
@@ -38,31 +38,16 @@
                                 <div class="form-group">
                                     <div class="form-row">
                                         <div class="col">
-                                            <label for="fisrtname">First name</label>
-                                            <input type="text" class="form-control" name="fisrtname" placeholder="First name">
+                                        <input type="text" class="form-control" placeholder="First name">
                                         </div>
                                         <div class="col">
-                                            <label for="lastname">Last name</label>
-                                            <input type="text" class="form-control" name="lastname" placeholder="Last name">
+                                        <input type="text" class="form-control" placeholder="Last name">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                </div>
-                                <div class="form-group">
-                                    <div class="form-row">
-                                        <div class="col">
-                                            <label for="email">Password</label>
-                                            <input type="text" class="form-control" placeholder="Password">
-                                        </div>
-                                        <div class="col">
-                                            <label for="email">Repeat Password</label>
-                                            <input type="text" class="form-control" placeholder="Repeat Password">
-                                        </div>
-                                    </div>
-                                </div>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                </div> 
                                 <div class="form-group">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" id="gridCheck">
