--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>La pression bordelaise</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/css/common.css">
-    <link rel="stylesheet" href="styles/css/connexion.css">
+    <link rel="stylesheet" href="styles/css/auth.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -33,46 +33,19 @@
                 </nav>
                 <div class="container content">
                     <div class="form-box">
-                            <h1 class="title">Inscrivez-Vous</h1>
+                            <h1 class="title">Connectez-Vous</h1>
                             <form>
-                                <div class="form-group">
-                                    <div class="form-row">
-                                        <div class="col">
-                                            <label for="fisrtname">First name</label>
-                                            <input type="text" class="form-control" name="fisrtname" placeholder="First name">
-                                        </div>
-                                        <div class="col">
-                                            <label for="lastname">Last name</label>
-                                            <input type="text" class="form-control" name="lastname" placeholder="Last name">
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="form-group">
                                     <label for="email">Email</label>
                                     <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                 </div>
                                 <div class="form-group">
-                                    <div class="form-row">
-                                        <div class="col">
-                                            <label for="email">Password</label>
-                                            <input type="text" class="form-control" placeholder="Password">
-                                        </div>
-                                        <div class="col">
-                                            <label for="email">Repeat Password</label>
-                                            <input type="text" class="form-control" placeholder="Repeat Password">
-                                        </div>
-                                    </div>
+                                    <label for="pass">Mot de passe</label>
+                                    <input type="password" class="form-control" name="pass" placeholder="Enter email">
                                 </div>
                                 <div class="form-group">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                                        <label class="form-check-label" for="gridCheck">
-                                            J'ai lu et j'accepte les Conditions Générales d'Utilisation et la Politique de Protection des Données Personnelles.
-                                        </label>
-                                    </div>
-                                </div>
-                                <button type="submit" class="btn btn-inscription">S'inscrire</button>
-                                <p class="already-accound">Vous avez déjà un compte ? <br><a href="">Connectez-vous</a></p>
+                                <button type="submit" class="btn btn-login">Se connecter</button>
+                                <p class="already-accound">Vous n'avez pas encore compte ? <br><a href="register">Inscrivez-vous</a></p>
                             </form>
                         </div>
                 </div>
