--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
             <div class="header-right col-md-7">
                 <nav>
-                    <a href="#" class="btn btn-top-second">Se connecter</a>
-                    <a href="#" class="btn btn-top-main">S'inscrire</a>
+                    <a href="login" class="btn btn-top-second">Se connecter</a>
+                    <a href="register" class="btn btn-top-main">S'inscrire</a>
                 </nav>
                 <div class="content">
                     <h1 class="bigtitle">
