--- a/commentaires.html
+++ b/commentaires.html
@@ -46,75 +46,75 @@
                     <div class="image-box">
                         <img src="assets/images/justine.jpg" alt="">
                     </div>
-                    <p class="name">Nom</p>
+                    <p class="name">juju</p>
                 </div>
                 <div class="comment-content">
                     <div class="comment-title">
-                        <h2>Le titre</h2>
+                        <h2>Génial</h2>
                         <div class="icons">
                             <svg class="poubelle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6 19C6 20.1 6.9 21 8 21H16C17.1 21 18 20.1 18 19V7H6V19ZM19 4H15.5L14.5 3H9.5L8.5 4H5V6H19V4Z" fill="#FFEED3"/>
                             </svg>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati veniam dolore, cupiditate hic suscipit vero? Consequuntur commodi, velit neque, sint repudiandae pariatur iusto asperiores magnam facere culpa, modi ullam corporis.</p>
+                    <p>Je suis ravie de votre blog, il n'y a que des articles enrichissants et riches en informations. Les nombreux articles sur la bière m'ont été utiles et ont permis d'occuper une partie de mon temps durant le confinement. Continuez ainsi!</p>
                 </div>
             </div>
             <div class="comment">
                 <div class="profil">
                     <div class="image-box">
-                        <img src="assets/images/justine.jpg" alt="">
+                        <img src="assets/images/lea.jpg" alt="">
                     </div>
-                    <p class="name">Nom</p>
+                    <p class="name">lélé50</p>
                 </div>
                 <div class="comment-content">
                     <div class="comment-title">
-                        <h2>Le titre</h2>
+                        <h2>Parfait</h2>
                         <div class="icons">
                             <svg class="poubelle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6 19C6 20.1 6.9 21 8 21H16C17.1 21 18 20.1 18 19V7H6V19ZM19 4H15.5L14.5 3H9.5L8.5 4H5V6H19V4Z" fill="#FFEED3"/>
                             </svg>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati veniam dolore, cupiditate hic suscipit vero? Consequuntur commodi, velit neque, sint repudiandae pariatur iusto asperiores magnam facere culpa, modi ullam corporis.</p>
+                    <p>Je suis fan de votre blog, j'adore la bière, les articles m'ont permis d'en apprendre plus sur ma boisson préférée. Dès aujourd'hui je peux affirmer connaître la bière et son actualité grâce à vous.</p>
                 </div>
             </div>
             <div class="comment">
                 <div class="profil">
                     <div class="image-box">
-                        <img src="assets/images/justine.jpg" alt="">
+                        <img src="assets/images/maxime.png" alt="">
                     </div>
-                    <p class="name">Nom</p>
+                    <p class="name">Maximator</p>
                 </div>
                 <div class="comment-content">
                     <div class="comment-title">
-                        <h2>Le titre</h2>
+                        <h2>Sympatique</h2>
                         <div class="icons">
                             <svg class="poubelle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6 19C6 20.1 6.9 21 8 21H16C17.1 21 18 20.1 18 19V7H6V19ZM19 4H15.5L14.5 3H9.5L8.5 4H5V6H19V4Z" fill="#FFEED3"/>
                             </svg>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati veniam dolore, cupiditate hic suscipit vero? Consequuntur commodi, velit neque, sint repudiandae pariatur iusto asperiores magnam facere culpa, modi ullam corporis.</p>
+                    <p>J'ai lu vos articles avec une bonne bière corona à la main, quel plaisir!. Je ne comprends pas que les gens arrivent à associer la bière corona au coronavirus... Il est évident qu'il n'y a aucun rapport entre les deux...</p>
                 </div>
             </div>
             <div class="comment">
                 <div class="profil">
                     <div class="image-box">
-                        <img src="assets/images/justine.jpg" alt="">
+                        <img src="assets/images/patrick.png" alt="">
                     </div>
-                    <p class="name">Nom</p>
+                    <p class="name">Patdu33</p>
                 </div>
                 <div class="comment-content">
                     <div class="comment-title">
-                        <h2>Le titre</h2>
+                        <h2>Cool</h2>
                         <div class="icons">
                             <svg class="poubelle" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6 19C6 20.1 6.9 21 8 21H16C17.1 21 18 20.1 18 19V7H6V19ZM19 4H15.5L14.5 3H9.5L8.5 4H5V6H19V4Z" fill="#FFEED3"/>
                             </svg>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati veniam dolore, cupiditate hic suscipit vero? Consequuntur commodi, velit neque, sint repudiandae pariatur iusto asperiores magnam facere culpa, modi ullam corporis.</p>
+                    <p>Votre site est plutôt sympa, il est très simple d'utilisation j'ai pu en apprendre beaucoup sur la bière en seulement quelques clicks! En temps normal, j'ai du mal à naviguer sur les sites web mais la c'est parfait pour moi.</p>
                 </div>
             </div>
         </main>
