premiere modif enzo mentionslegales css

--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/css/mentionslegales.css">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <strong>La seule contrepartie à l'utilisation de ces mentions légales, est l'engagement total à laisser le lien crédit subdelirium sur cette page de mentions légales.</strong><br />
-    Vos mentions légales :
+<header>
+  
+</header>
     <h2>Informations légales</h2>
     <h3>1. Présentation du site.</h3>
     <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site <a href="http://www.pressionbordelaise.com/">www.pressionbordelaise.com</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</p>
-    <p><strong>Propriétaire</strong> : IUT Bordeaux Montaigne –  – 1 rue Jacques Ellu<br />
+    <p><strong>Propriétaire</strong> : IUT Bordeaux Montaigne –  – 1 rue Jacques Ellul<br />
     <strong>Créateur</strong>  : <a href="http://www.iut.u-bordeaux-montaigne.fr/">IUT Bordeaux Montaigne</a><br />
     <strong>Responsable publication</strong> : Vincent Soubabère – vincentcrpg10@gmail.com<br />
     Le responsable publication est une personne physique ou une personne morale.<br />
