--- a/commentaires.html
+++ b/commentaires.html
@@ -38,6 +38,10 @@
                  </nav>
             </div>
         </header>
+
+        <div class="image-user">
+            <img src="https://www.gravatar.com/avatar/9d7ccc9ba7020ed15feccc1c21846ca5?d=https%3A%2F%2Fwww.cierpgaud.fr%2Fwp-content%2Fuploads%2F2018%2F07%2Favatar.jpg&s=40" height="50px" width="50px">
+        </div>
         <main class="container">
             <h1>Liste des commentaires</h1>
 
